# SwiTAS

./: .clang-format  .gitignore  LICENSE  Makefile  NX-TAS-UI.code-workspace  Nx-TAS-Test.json  PLANS.md  README.md  SwiTAS.code-workspace  compile_commands.json  decodeAndResize.hpp  main.cpp  main.hpp  shak.txt  thing.txt  ui.hpp
arduino_application/: Makefile  awesomesauce.elf  generated.STM32F1.ld  generated.stm32f103c8.ld  howto.txt  tasks.json  traffic_log_pro_controller_bt (1).txt
arduino_application/test/: CMakeLists.txt  command.test.cpp  doctest.h  joystick.test.cpp  test_main.cpp
network_test/: Makefile  compile_commands.json
pc_application/: .clang-format  .gitignore  Extended.txt  Makefile  NSWreleases.xml  buildRelease.sh  buildReleaseDebian.sh  buildReleaseMac.sh  buildReleaseWindows.sh  cCC.sh  ccc.sh  compile_commands.json  main.hpp  mainSettings.json  msnc.sh  switas-debian-64bit.deb  switas_recent.json  switas_settings.json  thing.json  thing.txt
pcapplication/: main.cpp  main.hpp  mainWindow.h
screenshots/: resize.sh
sharedNetworkCode/: buttonData.hpp  networkInterface.cpp  networkInterface.hpp  (+2 more)
sysmodule_application/include/metl/src/: Apply.h  Associativity.h  CMakeLists.txt  Compiler.h  Compiler.impl.h  CompilerApi.h  CompilerApi.impl.h  CompilerBits.h  CompilerBits.impl.h  CompilerHelpers.h  ConstexprBranching.h  DeepCopy.h  Exceptions.h  LiteralConverters.h  MakeCompiler.h  Stack.h  Stack.impl.h  TypeEnum.h  TypeList.h  TypeMap.h  VarExpression.h  actions.h  addDefaults.h  bool_constant.h  grammar.h  nameMangling.h  sortAndAddDefaults.h
(+290 files in other folders)
